# bazel-demo

./: BUILD  README.md  WORKSPACE  build.sh  gazelle-update-repos.sh  gazelle.sh  go.mod
src/go-demo/: BUILD.bazel  hello.go
src/go-lib/: BUILD.bazel  greet.go
